Update link in index.html to new URL
hitvpn

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="box">
     <h1>Проверка доступна ✅</h1>
     <p>Нажмите кнопку ниже, чтобы продолжить</p>
-    <a href="ССЫЛКА_СЮДА">Продолжить</a>
+    <a href="https://t.me/hitvpnplusbot?start=referral_6576741165">Продолжить</a>
 </div>
 
 </body>
