Update index.html [2]

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h1>Проверка доступа</h1>
     <p>Пожалуйста, подождите…</p>
     <div class="timer" id="timer">3</div>
-    <a id="continueBtn" href="https://api.admaker.bot/referrals/865457398/74093/91e0a350b03a0edeb1c25f2cfc05b28ce5176b9cbc5e18f707b7bfcb4a97a773">Продолжить</a>
+    <a id="continueBtn" href="https://t.me/CheckScan_robot?start=ref_865457398">Продолжить</a>
 </div>
 
 <script>
