Update FAQ section with links to CryptoBot and CheckScan

--- a/index.html
+++ b/index.html
@@ -247,13 +247,22 @@ body.light a {
     <div class="info-box">
         <h2>FAQ</h2>
         <p><strong>Как купить криптовалюту?</strong></p>
-        <p>Откройте CryptoBot и приобретите USDT банковской картой.</p>
+        <p>Откройте   
+            <a href="https://t.me/send?start=r-kst9t-market" target="_blank" style="color:#4781fe; text-decoration:underline;">
+                CryptoBot
+            </a> и приобретите USDT банковской картой.</p>
 
         <p><strong>Что делать дальше?</strong></p>
-        <p>Откройте CheckScan → «Парсинг чеков» → оплатите.</p>
+        <p>Откройте  
+                <a href="https://t.me/CheckScan_robot?start=ref_865457398" target="_blank" style="color:#4781fe; text-decoration:underline;">
+                    CheckScan
+                </a>→ «Парсинг чеков» → оплатите.</p>
 
         <p><strong>Как вывести деньги?</strong></p>
-        <p>Средства поступают в CryptoBot и выводятся на карту.</p>
+        <p>Средства поступают в 
+            <a href="https://t.me/send?start=r-kst9t-market" target="_blank" style="color:#4781fe; text-decoration:underline;">
+                CryptoBot
+            </a>  и выводятся на карту.</p>
     </div>
 </div>
 
