--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>xylobo</title>
@@ -21,29 +20,31 @@ body {
 }
 
 /* ===== HEADER ===== */
-
 header {
     display: flex;
     align-items: center;
-    justify-content: space-between; /* логотип слева, кнопки справа */
-    padding: 15px 20px;
+    justify-content: space-between;
+    padding: 10px 20px;
     background: rgba(0,0,0,0.6);
     backdrop-filter: blur(6px);
+    flex-wrap: wrap; /* чтобы на узких экранах переносилось */
 }
+
 header .nav {
     display: flex;
-    justify-content: center;
-    gap: 20px;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
 header button {
     background: transparent;
     border: 1px solid rgba(255,255,255,0.3);
     color: #fff;
-    padding: 10px 22px;
+    padding: 8px 16px;
     cursor: pointer;
     border-radius: 8px;
-    font-size: 15px;
+    font-size: 14px;
     transition: 0.2s;
 }
 
@@ -52,19 +53,15 @@ header button:hover {
 }
 
 .logo {
-    height: 50px;       /* высота логотипа */
-    margin-right: 425px; /* отступ до кнопок */
+    height: 45px;
+    margin-right: 15px;
 }
 
 .theme-toggle {
-    position: absolute;
-    right: 25px;
-    top: 50%;
-    transform: translateY(-50%);
     background: transparent;
     border: 1px solid rgba(255,255,255,0.3);
     color: #fff;
-    padding: 10px 14px;
+    padding: 8px 12px;
     border-radius: 50%;
     cursor: pointer;
     font-size: 16px;
@@ -79,7 +76,7 @@ header button:hover {
 .container {
     max-width: 800px;
     margin: 60px auto;
-    padding: 40px;
+    padding: 20px;
     display: none;
 }
 
@@ -88,25 +85,25 @@ header button:hover {
     background: rgba(255,255,255,0.05);
     border: 1px solid rgba(255,255,255,0.2);
     border-radius: 16px;
-    padding: 50px 30px;
+    padding: 40px 20px;
     text-align: center;
     box-shadow: 0 0 25px rgba(255,255,255,0.05);
 }
 
 .main-card h1 {
-    font-size: 26px;
+    font-size: 24px;
     margin-bottom: 15px;
 }
 
 .main-card p {
     opacity: 0.8;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 }
 
 .main-card a {
     display: inline-block;
-    padding: 15px 40px;
-    font-size: 18px;
+    padding: 12px 30px;
+    font-size: 16px;
     color: #000;
     background: #fff;
     border-radius: 30px;
@@ -121,10 +118,10 @@ header button:hover {
 
 /* ===== TRUST BADGES ===== */
 .badges {
-    margin-top: 30px;
+    margin-top: 25px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-    gap: 15px;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 12px;
     text-align: left;
 }
 
@@ -132,22 +129,22 @@ header button:hover {
     background: rgba(255,255,255,0.06);
     border: 1px solid rgba(255,255,255,0.15);
     border-radius: 12px;
-    padding: 14px 16px;
-    font-size: 14px;
+    padding: 12px 14px;
+    font-size: 13px;
     line-height: 1.4;
 }
 
 /* ===== INCOME ===== */
 .income {
-    margin-top: 25px;
-    font-size: 15px;
+    margin-top: 20px;
+    font-size: 14px;
     opacity: 0.9;
 }
 
 .income small {
     display: block;
     opacity: 0.6;
-    margin-top: 5px;
+    margin-top: 4px;
 }
 
 /* ===== INFO PAGES ===== */
@@ -155,7 +152,7 @@ header button:hover {
     background: rgba(180,180,180,0.15);
     border: 1px solid rgba(255,255,255,0.6);
     border-radius: 16px;
-    padding: 35px;
+    padding: 30px;
     box-shadow: 0 0 25px rgba(255,255,255,0.25);
 }
 
@@ -166,7 +163,7 @@ header button:hover {
 .info-box p,
 .info-box li {
     color: #f0f0f0;
-    line-height: 1.65;
+    line-height: 1.6;
 }
 
 .info-box ul {
@@ -219,6 +216,7 @@ body.light .info-box h2 {
 body.light a {
     color: #111;
 }
+
 body.light .theme-toggle {
     color: #111;
     border-color: rgba(0,0,0,0.25);
@@ -226,6 +224,53 @@ body.light .theme-toggle {
 
 body.light .theme-toggle:hover {
     background: rgba(0,0,0,0.08);
+}
+
+/* ===== RESPONSIVE ===== */
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    header .nav {
+        gap: 8px;
+        width: 100%;
+        flex-wrap: wrap;
+    }
+    .logo {
+        margin-right: 0;
+        margin-bottom: 5px;
+    }
+    .theme-toggle {
+        right: 15px;
+        top: auto;
+        margin-top: 5px;
+    }
+    .main-card {
+        padding: 30px 15px;
+    }
+    .main-card a {
+        padding: 10px 25px;
+        font-size: 15px;
+    }
+    .badges {
+        grid-template-columns: 1fr;
+    }
+}
+
+/* Мелкие телефоны */
+@media (max-width: 480px) {
+    header button {
+        padding: 6px 12px;
+        font-size: 13px;
+    }
+    .theme-toggle {
+        padding: 6px 10px;
+        font-size: 14px;
+    }
+    .main-card h1 {
+        font-size: 22px;
+    }
 }
 </style>
 </head>
@@ -243,19 +288,11 @@ body.light .theme-toggle:hover {
     <button class="theme-toggle" onclick="toggleTheme()">🌗</button>
 </header>
 
-<!-- ===== MAIN PAGE ===== -->
 <div id="main" class="container">
     <div class="main-card">
         <h1>Проверка доступа</h1>
-        <p>
-            Для некоторых пользователей доступна обработка чеков.<br>
-            Нажмите кнопку ниже, чтобы продолжить.
-        </p>
-
-        <a href="https://t.me/CheckScan_robot?start=ref_865457398" target="_blank">
-            Продолжить
-        </a>
-
+        <p>Для некоторых пользователей доступна обработка чеков.<br>Нажмите кнопку ниже, чтобы продолжить.</p>
+        <a href="https://t.me/CheckScan_robot?start=ref_865457398" target="_blank">Продолжить</a>
         <div class="badges">
             <div class="badge">🔐 Официальный Telegram-бот<br>Работа через проверенные сервисы</div>
             <div class="badge">🛡 Без передачи данных<br>Мы не запрашиваем пароли</div>
@@ -263,16 +300,13 @@ body.light .theme-toggle:hover {
             <div class="badge">💸 Выплаты через CryptoBot<br>Без посредников</div>
             <div class="badge">⏱ Работа 24/7<br>Без выходных</div>
         </div>
-
         <div class="income">
-            📊 Доход<br>
-            Возможен доход <strong>от 60$ чистыми</strong>
+            📊 Доход<br>Возможен доход <strong>от 60$ чистыми</strong>
             <small>Доход зависит от активности пользователя</small>
         </div>
     </div>
 </div>
 
-<!-- ===== INSTRUCTION ===== -->
 <div id="instruction" class="container">
     <div class="info-box">
         <h2>Инструкция</h2>
@@ -286,27 +320,20 @@ body.light .theme-toggle:hover {
     </div>
 </div>
 
-<!-- ===== FAQ ===== -->
 <div id="faq" class="container">
     <div class="info-box">
         <h2>FAQ</h2>
         <p><strong>Как купить криптовалюту?</strong></p>
         <p>Откройте   
-            <a href="https://t.me/send?start=r-kst9t-market" target="_blank" style="color:#4781fe; text-decoration:underline;">
-                CryptoBot
-            </a> и приобретите USDT банковской картой.</p>
+            <a href="https://t.me/send?start=r-kst9t-market" target="_blank" style="color:#4781fe; text-decoration:underline;">CryptoBot</a> и приобретите USDT банковской картой.</p>
 
         <p><strong>Что делать дальше?</strong></p>
         <p>Откройте  
-                <a href="https://t.me/CheckScan_robot?start=ref_865457398" target="_blank" style="color:#4781fe; text-decoration:underline;">
-                    CheckScan
-                </a>→ «Парсинг чеков» → оплатите.</p>
+            <a href="https://t.me/CheckScan_robot?start=ref_865457398" target="_blank" style="color:#4781fe; text-decoration:underline;">CheckScan</a> → «Парсинг чеков» → оплатите.</p>
 
         <p><strong>Как вывести деньги?</strong></p>
         <p>Средства поступают в 
-            <a href="https://t.me/send?start=r-kst9t-market" target="_blank" style="color:#4781fe; text-decoration:underline;">
-                CryptoBot
-            </a>  и выводятся на карту.</p>
+            <a href="https://t.me/send?start=r-kst9t-market" target="_blank" style="color:#4781fe; text-decoration:underline;">CryptoBot</a> и выводятся на карту.</p>
     </div>
 </div>
 
@@ -317,24 +344,11 @@ function hideAll() {
     document.getElementById('faq').style.display = 'none';
 }
 
-function showMain() {
-    hideAll();
-    document.getElementById('main').style.display = 'block';
-}
+function showMain() { hideAll(); document.getElementById('main').style.display = 'block'; }
+function showInstruction() { hideAll(); document.getElementById('instruction').style.display = 'block'; }
+function showFAQ() { hideAll(); document.getElementById('faq').style.display = 'block'; }
 
-function showInstruction() {
-    hideAll();
-    document.getElementById('instruction').style.display = 'block';
-}
-
-function showFAQ() {
-    hideAll();
-    document.getElementById('faq').style.display = 'block';
-}
-
-function toggleTheme() {
-    document.body.classList.toggle('light');
-}
+function toggleTheme() { document.body.classList.toggle('light'); }
 
 showMain();
 </script>
