--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@ body.light .theme-toggle:hover {
             <li>Запустите обработку</li>
             <li>Ожидайте результат</li>
         </ul>
+        <a href="https://telegra.ph/Podrobnaya-instrukciya-ot-XYLOBO-01-08" target="_blank" style="color:#4781fe; text-decoration:underline;"> Или нажмите здесь чтобы увидеть более подробную иструкцию</a>
     </div>
 </div>
 
